src/test/ui/type-alias-impl-trait/generic_not_used.full_tait.stderr
error: at least one trait must be specified
  --> $DIR/generic_not_used.rs:8:33
   |
LL | type WrongGeneric<T: 'static> = impl 'static;
   |                                 ^^^^^^^^^^^^

warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/generic_not_used.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: type parameter `V` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/generic_not_used.rs:11:73
   |
LL |   fn wrong_generic<U: 'static, V: 'static>(_: U, v: V) -> WrongGeneric<U> {
   |  _________________________________________________________________________^
LL | |
LL | |     v
LL | | }
   | |_^

error: aborting due to 2 previous errors; 1 warning emitted

